# Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cngine.sln  premake5.lua
Sandbox/: Sandbox.vcxproj  imgui.ini  premake5.lua
Sandbox/src/: SandBox2D.cpp  SandBox2D.h  Sandbox.cpp
cngine/: cngine.vcxproj  cngine.vcxproj.filters  premake5.lua
cngine-Editor/: imgui.ini
cngine-Editor/assets/shaders/: Texture.glsl
cngine-Editor/src/: CngineEditorApp.cpp  EditorLayer.cpp  EditorLayer.h
cngine-Editor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
cngine/src/: cgpch.h  cngine.h
cngine/src/Platform/OpenGL/: ImGuiOpenGLRender.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
cngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
cngine/src/cngine/: Application.cpp  Application.h  EntryPoint.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Window.h  core.h  input.h
cngine/src/cngine/Core/: Application.cpp  Application.h  EntryPoint.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  MouseButtonCodes.h  MouseCodes.h  Timestep.h  Window.h  core.h  input.h
cngine/src/cngine/Debug/: Instrumentor.h
cngine/src/cngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
cngine/src/cngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
cngine/src/cngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
cngine/src/cngine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
